make it easy to run this example with h2h