@@ -53,6 +53,7 @@ http://maven.apache.org/maven-v4_0_0.xsd">
 
 
     <build>
+        <defaultGoal>jetty:run-forked</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -89,22 +90,6 @@ http://maven.apache.org/maven-v4_0_0.xsd">
                 </configuration>
             </plugin>
             <plugin>
-                <!-- http://wiki.eclipse.org/Jetty/Feature/Jetty_Maven_Plugin -->
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <configuration>
-                    <stopKey>foo</stopKey>
-                    <stopPort>9999</stopPort>
-                    <webAppConfig>
-                        <contextPath>/core/</contextPath>
-                    </webAppConfig>
-                </configuration>
-                <!-- <executions> <execution> <id>start-jetty</id> <phase>pre-integration-test</phase> 
-                    <goals> <goal>start</goal> </goals> <configuration> <daemon>true</daemon> 
-                    </configuration> </execution> <execution> <id>stop-jetty</id> <phase>post-integration-test</phase> 
-                    <goals> <goal>stop</goal> </goals> </execution> </executions> -->
-            </plugin>
-            <plugin>
                 <!-- http://maven.apache.org/plugins/maven-war-plugin/ -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
@@ -119,6 +104,52 @@ http://maven.apache.org/maven-v4_0_0.xsd">
                         </manifestEntries>
                     </archive>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
+                <executions>
+                    <execution>
+                        <id>unpack</id>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>io.highway.to.urhell</groupId>
+                                    <artifactId>h2hell-distribution</artifactId>
+                                    <version>0.0.1-SNAPSHOT</version>
+                                    <classifier>distrib</classifier>
+                                    <type>zip</type>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <!-- http://wiki.eclipse.org/Jetty/Feature/Jetty_Maven_Plugin -->
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArgs>
+                        -javaagent:${project.build.directory}/h2hell-distribution-0.0.1-SNAPSHOT/h2hell-agent-0.0.1-SNAPSHOT.jar
+                        -Djava.ext.dirs=${project.build.directory}/h2hell-distribution-0.0.1-SNAPSHOT/
+                    </jvmArgs>
+                    <stopKey>foo</stopKey>
+                    <stopPort>9999</stopPort>
+                    <webAppConfig>
+                        <contextPath>/core/</contextPath>
+                    </webAppConfig>
+                </configuration>
+                <!-- <executions> <execution> <id>start-jetty</id> <phase>pre-integration-test</phase>
+                    <goals> <goal>start</goal> </goals> <configuration> <daemon>true</daemon>
+                    </configuration> </execution> <execution> <id>stop-jetty</id> <phase>post-integration-test</phase>
+                    <goals> <goal>stop</goal> </goals> </execution> </executions> -->
             </plugin>
         </plugins>
     </build>
